# path_tracer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  camera.h  cmake_install.cmake  color.cpp  color.h  constants.h  hittable.cpp  hittable.h  image.h  interval.h  main.cpp  main_.cpp  ray.h  sphere.cpp  sphere.h  vec3.h
include/: app.h  axis_aligned_bbox.h  boundingbox.h  bvh.h  camera.h  color.h  grid.h  hit_record.h  hitrecord.h  hittable.h  input.h  interval.h  jobs.h  logger.h  mat3.h  material.h  matrix.h  mesh.h  multithreading.h  onb.h  pdf.h  perlin.h  planar.h  quad.h  random.h  ray.h  scatter.h  sphere.h  texture.h  triangle.h  utils.h  vec3.h
init/: box_stack.mtl  camera_angles.json  geometry.json  init_pars.json
init/meshes/: high_res_sphere.mtl  low_poly_sphere.mtl  sphere.mtl  tri.mtl
old_code/: main.cpp
old_code/include/: color.h  constant_medium.h  hit_record.h  hittable.h  material.h  quad.h  sphere.h  texture.h
old_code/src/: axis_aligned_bbox.cpp  bvh.cpp  camera.cpp  constant_medium.cpp  hittable.cpp  pdf.cpp  perlin.cpp  planar.cpp  quad.cpp  triangle.cpp
old_code/tests/: threadpool_test.cpp
src/: app.cpp  axis_aligned_bbox.cpp  boundingbox.cpp  bvh.cpp  camera.cpp  constant_medium.cpp  grid.cpp  hitrecord.cpp  hittable.cpp  input.cpp  interval.cpp  logger.cpp  mat3.cpp  material.cpp  matrix.cpp  mesh.cpp  onb.cpp  pdf.cpp  perlin.cpp  planar.cpp  quad.cpp  ray.cpp  sphere.cpp  texture.cpp  triangle.cpp  utils.cpp
test/: CMakeLists.txt  multithreading_test.cpp  random_test.cpp  vec3_test.cpp
tests/: CMakeLists.txt  thread_safe_queue_test.cpp  threadpool_test.cpp
